--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "bootstrap-icons": "^1.11.2",
-    "electron-updater": "^6.1.1"
+    "electron-updater": "^6.1.1",
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.37.1",
