--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   },
   "dependencies": {
     "bootstrap-icons": "^1.11.2",
+    "cors": "^2.8.5",
     "electron-updater": "^6.1.1",
+    "express": "^4.18.2",
     "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.37.1",
+    "@types/express": "^4.17.21",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.4",
