--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "electron-updater": "^6.1.1",
     "express": "^4.18.2",
+    "mongodb": "^6.3.0",
     "react-router-dom": "^6.21.1",
     "react-select": "^5.8.0"
   },
