--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bootstrap-icons": "^1.11.2",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
     "electron-updater": "^6.1.1",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
