--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.11.10",
     "electron-updater": "^6.1.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongodb": "^6.3.0",
     "react-router-dom": "^6.21.1",
     "react-select": "^5.8.0"
