--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
     "electron-updater": "^6.1.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "latest": "^0.2.0",
     "mongodb": "^6.3.0",
     "react-router-dom": "^6.21.2",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.37.1",
     "@types/express": "^4.17.21",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@types/ws": "^8.5.10",
     "@vitejs/plugin-react": "^4.0.4",
     "autoprefixer": "^10.4.16",
     "electron": "^28.1.1",
@@ -42,6 +45,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3",
+    "tree-kill": "^1.2.2",
     "typescript": "^5.1.6",
     "vite": "^4.4.9",
     "vite-plugin-electron": "^0.15.5",
